--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <nav>
             <p>Click to see:</p>
             <div>
-                <a href="/holygrail-1/index.html">Holygrail-1</a>
+                <a href="https://torivk.github.io/hands-on-3/">Holygrail-1</a>
             </div>
             <div>
-                <a href="/holygrail-3/index.html">Holygrail-3</a>
+                <a href="https://torivk.github.io/holygrail-3/">Holygrail-3</a>
             </div>
         </nav>
         <main>
